// ==============================================================================
// UCE-BUSLINK ENTERPRISE ERD
// DDD + Modular Monolith + Spring WebFlux + PostgreSQL
// SAD v3.0 Enterprise
// ==============================================================================



// ==============================================================================
// ENUMERATIONS
// ==============================================================================

Enum USER_ROLE_ENUM {
  STUDENT
  DRIVER
  ADMIN
  SUPERVISOR
}

Enum USER_STATUS_ENUM {
  ACTIVE
  INACTIVE
  SUSPENDED
}

Enum TRIP_STATE_ENUM {
  SCHEDULED
  ONGOING
  COMPLETED
  CANCELLED
}

Enum SEAT_STATE_ENUM {
  AVAILABLE
  RESERVED
  BOARDED
}

Enum RESERVATION_STATUS_ENUM {
  ACTIVE
  COMPLETED
  CANCELLED_BY_STUDENT
  CANCELLED_BY_ADMIN
  NO_SHOW
}

Enum BUS_STATUS_ENUM {
  OPERATIONAL
  MAINTENANCE
  OUT_OF_SERVICE
}

Enum TRUST_LEVEL_ENUM {
  EXCELLENT
  GOOD
  REGULAR
  LOW
  CRITICAL
}

Enum PENALTY_STATUS_ENUM {
  ACTIVE
  EXPIRED
}

Enum PENALTY_TYPE_ENUM {
  NO_SHOW
  LATE_CANCELLATION
  MISCONDUCT
}

Enum INCIDENT_TYPE_ENUM {
  DELAY
  BREAKDOWN
  TRAFFIC
  SECURITY
}

Enum INCIDENT_SEVERITY_ENUM {
  LOW
  MEDIUM
  HIGH
  CRITICAL
}



// ==============================================================================
// 1. USER & AUTHENTICATION CONTEXT
// ==============================================================================

Table USER {
  id uuid [pk]

  email varchar(255) [unique, not null]

  first_name varchar(100) [not null]
  last_name varchar(100) [not null]

  role USER_ROLE_ENUM [not null]
  status USER_STATUS_ENUM [not null]

  google_subject_id varchar(255) [unique]

  profile_picture_url text

  phone varchar(20)

  address text

  career varchar(150)

  document_number varchar(50) [unique]

  birth_date date

  created_at timestamp [not null]
  updated_at timestamp [not null]

  last_login_at timestamp

  deleted_at timestamp
}



Table REFRESH_TOKEN {
  id uuid [pk]

  user_id uuid [not null]

  token_hash text [unique, not null]

  revoked boolean [not null]

  expires_at timestamp [not null]

  created_at timestamp [not null]
}



Table AUDIT_LOG {
  id uuid [pk]

  user_id uuid [not null]

  action varchar(255) [not null]

  entity_type varchar(100) [not null]

  entity_id uuid

  details jsonb [not null]

  ip_address varchar(50)

  created_at timestamp [not null]
}



// ==============================================================================
// 2. TRUST SCORE CONTEXT
// ==============================================================================

Table TRUST_SCORE {
  id uuid [pk]

  user_id uuid [unique, not null]

  score integer [not null]

  level TRUST_LEVEL_ENUM [not null]

  total_reservations integer [not null]

  completed_reservations integer [not null]

  no_shows integer [not null]

  cancellations_last_30_days integer [not null]

  trend_last_7_days integer [not null]

  next_review_at timestamp

  created_at timestamp [not null]

  updated_at timestamp [not null]
}



Table TRUST_PENALTY {
  id uuid [pk]

  trust_score_id uuid [not null]

  type PENALTY_TYPE_ENUM [not null]

  reason text [not null]

  points_removed integer [not null]

  starts_at timestamp [not null]

  expires_at timestamp

  status PENALTY_STATUS_ENUM [not null]

  created_at timestamp [not null]
}



// ==============================================================================
// 3. ROUTING CONTEXT
// ==============================================================================

Table ROUTE {
  id uuid [pk]

  name varchar(255) [not null]

  description text

  is_active boolean [not null]

  estimated_duration_minutes integer [not null]

  created_by uuid
  updated_by uuid

  created_at timestamp [not null]

  updated_at timestamp [not null]

  deleted_at timestamp
}



Table STOP {
  id uuid [pk]

  name varchar(255) [not null]

  latitude double [not null]
  longitude double [not null]

  is_active boolean [not null]

  created_at timestamp [not null]

  deleted_at timestamp

  Note: 'latitude BETWEEN -90 AND 90 | longitude BETWEEN -180 AND 180'
}



Table ROUTE_STOP {
  route_id uuid [not null]

  stop_id uuid [not null]

  stop_order integer [not null]

  estimated_minutes_from_start integer [not null]

  created_at timestamp [not null]

  indexes {
    (route_id, stop_id) [pk]
    (route_id, stop_order) [unique]
  }
}



// ==============================================================================
// 4. FLEET CONTEXT
// ==============================================================================

Table BUS {
  id uuid [pk]

  plate_number varchar(50) [unique, not null]

  internal_code varchar(50) [unique, not null]

  seat_capacity integer [not null]

  manufacturer varchar(100)

  model varchar(100)

  operational_status BUS_STATUS_ENUM [not null]

  created_by uuid
  updated_by uuid

  created_at timestamp [not null]

  updated_at timestamp [not null]

  deleted_at timestamp
}



// ==============================================================================
// 5. TRIP CONTEXT
// ==============================================================================

Table TRIP {
  id uuid [pk]

  route_id uuid [not null]

  bus_id uuid [not null]

  driver_id uuid [not null]

  state TRIP_STATE_ENUM [not null]

  departure_time timestamp [not null]

  estimated_arrival_time timestamp [not null]

  actual_arrival_time timestamp

  started_at timestamp

  completed_at timestamp

  cancelled_at timestamp

  available_seats integer [not null]

  version bigint [not null]

  created_by uuid
  updated_by uuid

  created_at timestamp [not null]

  updated_at timestamp [not null]

  deleted_at timestamp
}



Table SEAT {
  id uuid [pk]

  trip_id uuid [not null]

  seat_number integer [not null]

  state SEAT_STATE_ENUM [not null]

  version bigint [not null]

  indexes {
    (trip_id, seat_number) [unique]
  }

  Note: 'seat_number <= BUS.seat_capacity'
}



Table GPS_LOCATION_HISTORY {
  id uuid [pk]

  trip_id uuid [not null]

  latitude double [not null]

  longitude double [not null]

  accuracy double

  velocity double

  recorded_at timestamp [not null]

  indexes {
    (trip_id, recorded_at)
  }

  Note: 'latitude BETWEEN -90 AND 90 | longitude BETWEEN -180 AND 180'
}



Table TRIP_INCIDENT {
  id uuid [pk]

  trip_id uuid [not null]

  reported_by_user_id uuid [not null]

  type INCIDENT_TYPE_ENUM [not null]

  severity INCIDENT_SEVERITY_ENUM [not null]

  description text [not null]

  created_at timestamp [not null]
}



// ==============================================================================
// 6. RESERVATION CONTEXT
// ==============================================================================

Table RESERVATION {
  id uuid [pk]

  user_id uuid [not null]

  trip_id uuid [not null]

  seat_id uuid [not null]

  boarding_stop_id uuid [not null]

  status RESERVATION_STATUS_ENUM [not null]

  qr_code text [not null]

  external_reference varchar(255)

  reserved_at timestamp [not null]

  cancelled_at timestamp

  boarded_at timestamp

  cancel_reason text

  version bigint [not null]

  indexes {
    (trip_id, user_id) [unique]
  }
}



// ==============================================================================
// 7. OPTIONAL ENTERPRISE TABLES
// ==============================================================================

Table BOARDING_EVENT {
  id uuid [pk]

  reservation_id uuid [not null]

  trip_id uuid [not null]

  boarded_by_user_id uuid

  boarded_at timestamp [not null]

  latitude double

  longitude double
}



Table NOTIFICATION_PREFERENCE {
  user_id uuid [pk]

  push_enabled boolean [not null]

  email_enabled boolean [not null]

  share_location boolean [not null]

  visibility varchar(50) [not null]
}



// ==============================================================================
// RELATIONSHIPS
// ==============================================================================

// USER & AUTH

Ref: REFRESH_TOKEN.user_id > USER.id

Ref: AUDIT_LOG.user_id > USER.id



// TRUST SCORE

Ref: TRUST_SCORE.user_id - USER.id

Ref: TRUST_PENALTY.trust_score_id > TRUST_SCORE.id



// ROUTING

Ref: ROUTE_STOP.route_id > ROUTE.id

Ref: ROUTE_STOP.stop_id > STOP.id

Ref: ROUTE.created_by > USER.id
Ref: ROUTE.updated_by > USER.id



// FLEET

Ref: BUS.created_by > USER.id
Ref: BUS.updated_by > USER.id



// TRIP

Ref: TRIP.route_id > ROUTE.id

Ref: TRIP.bus_id > BUS.id

Ref: TRIP.driver_id > USER.id

Ref: TRIP.created_by > USER.id
Ref: TRIP.updated_by > USER.id

Ref: SEAT.trip_id > TRIP.id

Ref: GPS_LOCATION_HISTORY.trip_id > TRIP.id

Ref: TRIP_INCIDENT.trip_id > TRIP.id

Ref: TRIP_INCIDENT.reported_by_user_id > USER.id



// RESERVATION

Ref: RESERVATION.user_id > USER.id

Ref: RESERVATION.trip_id > TRIP.id

Ref: RESERVATION.seat_id - SEAT.id

Ref: RESERVATION.boarding_stop_id > STOP.id



// OPTIONAL ENTERPRISE TABLES

Ref: BOARDING_EVENT.reservation_id > RESERVATION.id

Ref: BOARDING_EVENT.trip_id > TRIP.id

Ref: BOARDING_EVENT.boarded_by_user_id > USER.id

Ref: NOTIFICATION_PREFERENCE.user_id - USER.id



// ==============================================================================
// BUSINESS RULES
// ==============================================================================

/*
BUSINESS RULES

1. USER.role must be DRIVER for TRIP.driver_id.

2. A USER can only reserve once per TRIP.

3. ROUTE_STOP.stop_order must be unique within a ROUTE.

4. SEAT.seat_number must not exceed BUS.seat_capacity.

5. GPS_LOCATION_HISTORY is append-only.

6. TRUST_SCORE.score should be between 0 and 100.

7. Soft delete strategy is used through deleted_at.

8. Optimistic locking is implemented using version fields.

9. RESERVATION.boarding_stop_id must belong to the TRIP route.

10. Redis GEO is used for realtime tracking,
    PostgreSQL stores historical tracking.
*/